<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startPage">

    <ImageView
        android:id="@+id/idChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:maxWidth="320dp"
        android:minWidth="320dp"
        android:text="@string/app_desc"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idChat" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idGoogleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_background"
        android:maxWidth="320dp"
        android:minWidth="320dp"
        android:text="@string/continueWithGoogle"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idDesc" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/idCreateAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@color/black"
        android:maxWidth="320dp"
        android:minWidth="320dp"
        android:text="@string/app_create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idGoogleLogin" />

    <TextView
        android:id="@+id/idtNdC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:maxWidth="320dp"
        android:minWidth="320dp"
        android:text="@string/tndC"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idCreateAcc" />

    <TextView
        android:id="@+id/idLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_login"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idtNdC" />

    <TextView
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/logIn"
        android:textSize="16sp"
        android:textColor="#03A9F4"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/idLogin"
        app:layout_constraintTop_toBottomOf="@id/idtNdC" />

</androidx.constraintlayout.widget.ConstraintLayout>